<resources>
    <string name="app_name" translatable="false">UnipiShopping</string>
    <string name="title_part1">Welcome to</string>
    <string name="title_part2" translatable="false">Unipi</string>
    <string name="title_part3" translatable="false">PLI</string>
    <string name="title_part4" translatable="false">Shopping</string>
    <string name="login_bellow">Please Login to continue:</string>
    <string name="username_login">Username</string>
    <string name="password_login">Password</string>
    <string name="login_button">Login</string>
    <string name="buy_part1">Buy Product</string>
    <string name="buy_part2">here:</string>
    <string name="settings">Settings</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="color_change">Change Background Color:</string>
    <string name="font_size_change">Change Font Size:</string>
    <string name="coordinates_on_off">Turn On/Off Coordinates:</string>
    <string name="lang_change">Change Language:</string>
    <string name="color_btn_secondary">Blue</string>
    <string name="color_btn_primary">Lilac</string>
    <string name="lang1" translatable="false">ENG</string>
    <string name="lang2" translatable="false">GRE</string>
    <string name="lang3" translatable="false">ESP</string>
    <string name="fontSmall">Small</string>
    <string name="fontNormal">Normal</string>
    <string name="fontBig">Big</string>
    <string name="btnLocationIndicator">On</string>
</resources>