<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lilac"
    tools:context=".ui.SettingsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/logo_title_margin"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/frameLayout2"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pixelify_sans_bold"
            android:text="@string/title_part2"
            android:textColor="@color/black"
            android:textSize="@dimen/big_title" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pixelify_sans_bold"
            android:text="@string/title_part3"
            android:textColor="@color/bold_purple"
            android:textSize="@dimen/big_title" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pixelify_sans_bold"
            android:text="@string/title_part4"
            android:textColor="@color/black"
            android:textSize="@dimen/big_title" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/logo_margin"
        android:layout_marginTop="@dimen/logo_margin"
        android:background="@drawable/stroke"
        android:padding="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="@dimen/logo"
            android:layout_height="@dimen/logo"
            app:srcCompat="@drawable/store_icon" />
    </FrameLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="350sp"
        android:layout_height="550sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/stroke2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pixelify_sans_variable_font_wght"
        android:text="@string/settings"
        android:textSize="@dimen/main_title"
        android:textColor="@color/bold_purple"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/title_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/tvUsernameSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pixelify_sans_variable_font_wght"
            android:text="@string/username"
            android:textColor="@color/bold_purple"
            android:textSize="@dimen/sub_title" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/buy_margin_left"
            android:fontFamily="@font/pixelify_sans_variable_font_wght"
            android:text="@string/username_login"
            android:textColor="@color/black"
            android:textSize="@dimen/sub_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/title_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/tvPasswordSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pixelify_sans_variable_font_wght"
            android:text="@string/password"
            android:textColor="@color/bold_purple"
            android:textSize="@dimen/sub_title" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/buy_margin_left"
            android:fontFamily="@font/pixelify_sans_variable_font_wght"
            android:text="@string/password_login"
            android:textColor="@color/black"
            android:textSize="@dimen/sub_title" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>