<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lilac"
    tools:context=".ui.LoginActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_part1"
        android:fontFamily="@font/pixelify_sans_variable_font_wght"
        android:textSize="@dimen/main_title"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/title_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_part2"
            android:fontFamily="@font/pixelify_sans_bold"
            android:textSize="@dimen/main_title"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="86dp"
            tools:layout_editor_absoluteY="133dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_part3"
            android:fontFamily="@font/pixelify_sans_bold"
            android:textSize="@dimen/main_title"
            android:textColor="@color/bold_purple"
            tools:layout_editor_absoluteX="176dp"
            tools:layout_editor_absoluteY="132dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_part4"
            android:fontFamily="@font/pixelify_sans_bold"
            android:textSize="@dimen/main_title"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="263dp"
            tools:layout_editor_absoluteY="133dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_bellow"
        android:fontFamily="@font/pixelify_sans_variable_font_wght"
        android:textSize="@dimen/sub_title"
        android:textColor="@color/bold_purple"
        android:layout_marginTop="@dimen/sub_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>