<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lilac"
    tools:context=".ui.ProductActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/navigationBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/logo_title_margin"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/frameLayout2"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pixelify_sans_bold"
            android:text="@string/title_part2"
            android:textColor="@color/black"
            android:textSize="@dimen/big_title" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pixelify_sans_bold"
            android:text="@string/title_part3"
            android:textColor="@color/bold_purple"
            android:textSize="@dimen/big_title" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pixelify_sans_bold"
            android:text="@string/title_part4"
            android:textColor="@color/black"
            android:textSize="@dimen/big_title" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/logo_margin"
        android:layout_marginTop="@dimen/logo_margin"
        android:background="@drawable/stroke"
        android:padding="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="@dimen/logo"
            android:layout_height="@dimen/logo"
            app:srcCompat="@drawable/store_icon" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/product_margin"
        android:background="@drawable/stroke"
        android:padding="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivProductImg"
            android:layout_width="@dimen/main_img"
            android:layout_height="@dimen/main_img"
            android:scaleType="centerCrop"
            android:src="@drawable/bag1_icon" />
    </FrameLayout>

    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pixelify_sans_variable_font_wght"
        android:text="Product Name"
        android:textColor="@color/black"
        android:textSize="@dimen/product_info_big_n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tvProductPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pixelify_sans_bold"
        android:text="18.99$"
        android:textColor="@color/bold_purple"
        android:textSize="@dimen/product_info_big_n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProductName"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/buy_margin_top"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProductPrice">

        <TextView
            android:id="@+id/tvBuyProduct1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pixelify_sans_variable_font_wght"
            android:text="@string/buy_part1"
            android:textColor="@color/black"
            android:textSize="@dimen/product_info_big_n" />

        <TextView
            android:id="@+id/tvBuyProduct2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/buy_margin_left"
            android:fontFamily="@font/pixelify_sans_bold"
            android:text="@string/buy_part2"
            android:textColor="@color/bold_purple"
            android:textSize="@dimen/product_info_big_n" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sub_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/buy_btn"
            android:layout_height="@dimen/buy_btn"
            android:rotation="90"
            app:srcCompat="@drawable/arrow" />

        <ImageButton
            android:id="@+id/ivBuyButton"
            android:layout_width="@dimen/buy_btn"
            android:layout_height="@dimen/buy_btn"
            android:background="@drawable/stroke"
            android:scaleType="fitXY"
            android:padding="2dp"
            app:srcCompat="@drawable/buy_product" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/buy_btn"
            android:layout_height="@dimen/buy_btn"
            android:rotation="-90"
            app:srcCompat="@drawable/arrow" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pixelify_sans_bold"
        android:text="Code"
        android:textColor="@color/bold_purple"
        android:textSize="@dimen/product_info_small"
        android:layout_marginTop="@dimen/sub_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tvProductInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Info"
        android:fontFamily="@font/pixelify_sans_variable_font_wght"
        android:textColor="@color/black"
        android:textSize="@dimen/product_info_small"
        android:layout_marginTop="@dimen/sub_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCode"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>

<androidx.constraintlayout.widget.ConstraintLayout
android:id="@+id/navigationBar"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:background="@color/bold_purple"
android:padding="@dimen/nav_padding"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent">

<ImageButton
    android:id="@+id/nav_home"
    android:layout_width="@dimen/nav_btn"
    android:layout_height="@dimen/nav_btn"
    android:background="@drawable/stroke"
    android:padding="2dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@id/nav_location"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:scaleType="fitXY"
    android:src="@drawable/house_icon"/>

<ImageButton
    android:id="@+id/nav_location"
    android:layout_width="@dimen/nav_btn"
    android:layout_height="@dimen/nav_btn"
    android:background="@drawable/stroke"
    android:padding="2dp"
    app:layout_constraintStart_toEndOf="@id/nav_home"
    app:layout_constraintEnd_toStartOf="@id/nav_settings"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:scaleType="fitXY"
    android:src="@drawable/earth_icon"/>

<ImageButton
    android:id="@+id/nav_settings"
    android:layout_width="@dimen/nav_btn"
    android:layout_height="@dimen/nav_btn"
    android:background="@drawable/stroke"
    android:padding="2dp"
    app:layout_constraintStart_toEndOf="@id/nav_location"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:scaleType="fitXY"
    android:src="@drawable/gear_icon"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>